--- a/bin/index.html
+++ b/bin/index.html
@@ -46,6 +46,7 @@
 	<!--删除标签，ide不会自动添加js文件，请谨慎操作-->
 	<!--jsfile--startTag-->
 	<script src="js/util/StringUtil.js"></script>
+	<script src="js/util/HttpRequestUtil.js"></script>
 	<script src="js/module/oneViewModule.js"></script>
 	<script src="js/ui/layaUI.max.all.js"></script>
 	<script src="js/jump/BubblingItem.js"></script>
